--- a/05/Restructure/Restructure/Base.lproj/Main.storyboard
+++ b/05/Restructure/Restructure/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Restructure" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,74 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o33-4i-fxP">
+                                <rect key="frame" x="45" y="534" width="76" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Action Two"/>
+                                <variation key="heightClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="504" y="85" width="76" height="30"/>
+                                </variation>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QAK-IM-x4v">
+                                <rect key="frame" x="476" y="534" width="79" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Action Four"/>
+                                <variation key="heightClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="476" y="334" width="79" height="30"/>
+                                </variation>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L0U-R0-4Hb">
+                                <rect key="frame" x="472" y="496" width="88" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Action Three"/>
+                                <variation key="heightClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="476" y="282" width="88" height="30"/>
+                                </variation>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p3i-5e-xtg">
+                                <rect key="frame" x="45" y="496" width="76" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Action One"/>
+                                <variation key="heightClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="504" y="28" width="76" height="30"/>
+                                </variation>
+                            </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ayy-wg-rDL">
+                                <rect key="frame" x="20" y="28" width="560" height="460"/>
+                                <animations/>
+                                <color key="backgroundColor" red="0.99607843139999996" green="0.76470588240000004" blue="0.039215686270000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <variation key="heightClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="20" y="24" width="436" height="352"/>
+                                </variation>
+                            </view>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="p3i-5e-xtg" firstAttribute="top" secondItem="ayy-wg-rDL" secondAttribute="bottom" constant="8" id="29E-4G-wdD"/>
+                            <constraint firstItem="p3i-5e-xtg" firstAttribute="leading" secondItem="o33-4i-fxP" secondAttribute="leading" id="3X0-pT-che"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="o33-4i-fxP" secondAttribute="bottom" constant="36" id="AVK-bf-YOa"/>
+                            <constraint firstItem="ayy-wg-rDL" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="EeR-eM-ot5"/>
+                            <constraint firstItem="QAK-IM-x4v" firstAttribute="top" secondItem="L0U-R0-4Hb" secondAttribute="bottom" constant="8" id="Oz7-cI-exP"/>
+                            <constraint firstItem="L0U-R0-4Hb" firstAttribute="centerX" secondItem="QAK-IM-x4v" secondAttribute="centerX" id="Spp-zr-byg"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="QAK-IM-x4v" secondAttribute="bottom" constant="36" id="juo-ac-YHp"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="QAK-IM-x4v" secondAttribute="trailing" constant="25" id="mRH-ss-9TA"/>
+                            <constraint firstItem="ayy-wg-rDL" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="ofF-2V-JbC"/>
+                            <constraint firstItem="o33-4i-fxP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="25" id="qtI-zK-jXT"/>
+                            <constraint firstItem="ayy-wg-rDL" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="sfu-sw-9ma"/>
+                            <constraint firstItem="o33-4i-fxP" firstAttribute="top" secondItem="p3i-5e-xtg" secondAttribute="bottom" constant="8" id="yJh-n6-biT"/>
+                        </constraints>
+                        <variation key="heightClass=compact">
+                            <mask key="subviews">
+                                <include reference="p3i-5e-xtg"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="260" y="306"/>
         </scene>
     </scenes>
 </document>
