--- a/07/Pickers/Pickers/Base.lproj/Main.storyboard
+++ b/07/Pickers/Pickers/Base.lproj/Main.storyboard
@@ -1,25 +1,137 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="G3c-aP-gPO">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Single-->
+        <scene sceneID="mVg-ue-nqv">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="yjb-b8-fZB" customClass="SingleComponentPickerViewController" customModule="Pickers" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="RM0-CU-2EB"/>
+                        <viewControllerLayoutGuide type="bottom" id="7Tm-Fb-5cw"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="NeA-cg-tlG">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Single" image="singleicon" id="a6h-3b-abM"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="77H-9y-Pp8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="675" y="581"/>
+        </scene>
+        <!--Custom-->
+        <scene sceneID="OZP-sN-1jo">
+            <objects>
+                <viewController id="f80-hx-J6j" customClass="CustomPickerViewController" customModule="Pickers" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="YjP-4z-Yki"/>
+                        <viewControllerLayoutGuide type="bottom" id="S7c-e3-brU"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kGa-7M-VTI">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Custom" image="toolicon" id="nSY-0J-8Gn"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="I1n-sD-fB3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-619" y="979"/>
+        </scene>
+        <!--Double-->
+        <scene sceneID="1Z5-LX-lm5">
+            <objects>
+                <viewController id="a7w-ec-hBC" customClass="DoubleComponentPickerViewController" customModule="Pickers" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Fgs-w9-ggA"/>
+                        <viewControllerLayoutGuide type="bottom" id="oF5-4z-azv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Ocb-fk-wlP">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Double" image="doubleicon" id="cCm-b6-Jwx"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wMt-JP-LIL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="32" y="1017"/>
+        </scene>
+        <!--Date-->
+        <scene sceneID="Psx-dy-2Kq">
+            <objects>
+                <viewController id="dnA-Gj-Grv" customClass="DatePickerViewController" customModule="Pickers" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="MmM-iP-WxE"/>
+                        <viewControllerLayoutGuide type="bottom" id="ena-iU-uXa"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="wbU-xk-2qN">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Date" image="clockicon" id="dbi-W0-Usm"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="LJq-Vg-J0H" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="675" y="-80"/>
+        </scene>
+        <!--Dependent-->
+        <scene sceneID="OHF-DY-SrU">
+            <objects>
+                <viewController id="du2-V3-e8A" customClass="DependentComponentPickerViewController" customModule="Pickers" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="5Sl-UU-nk4"/>
+                        <viewControllerLayoutGuide type="bottom" id="eVE-WW-uSE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="eSh-PU-zBf">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Dependent" image="dependenticon" id="hZX-Am-JT9"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="W23-q8-YTI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="111" y="-471"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="MV7-XG-YLR">
+            <objects>
+                <tabBarController id="G3c-aP-gPO" customClass="ViewController" customModule="Pickers" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="avq-lM-9D9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <animations/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="dnA-Gj-Grv" kind="relationship" relationship="viewControllers" id="rEU-Xq-FNx"/>
+                        <segue destination="yjb-b8-fZB" kind="relationship" relationship="viewControllers" id="DL7-F5-SMQ"/>
+                        <segue destination="a7w-ec-hBC" kind="relationship" relationship="viewControllers" id="GHZ-hz-YR2"/>
+                        <segue destination="du2-V3-e8A" kind="relationship" relationship="viewControllers" id="uFh-Gs-pr1"/>
+                        <segue destination="f80-hx-J6j" kind="relationship" relationship="viewControllers" id="sAR-8I-X1v"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vmK-Qq-0yC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-145" y="251"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="clockicon" width="24" height="24"/>
+        <image name="dependenticon" width="25" height="24"/>
+        <image name="doubleicon" width="25" height="24"/>
+        <image name="singleicon" width="25" height="24"/>
+        <image name="toolicon" width="24" height="24"/>
+    </resources>
 </document>
