create dependent tab from chapter 07 project

--- a/07/Pickers/Pickers/Base.lproj/Main.storyboard
+++ b/07/Pickers/Pickers/Base.lproj/Main.storyboard
@@ -145,13 +145,13 @@
                                 <rect key="frame" x="0.0" y="20" width="600" height="216"/>
                                 <animations/>
                                 <date key="date" timeIntervalSinceReferenceDate="475829962.67467201">
-                                    <!--2016-01-30 06:59:22 +0000-->
+                                    <!--۱۳۹۴-۱۱-۱۰ ۰۶:۵۹:۲۲ +0000-->
                                 </date>
                                 <date key="minimumDate" timeIntervalSinceReferenceDate="-978267600">
-                                    <!--1970-01-01 11:00:00 +0000-->
+                                    <!--۱۳۴۸-۱۰-۱۱ ۱۱:۰۰:۰۰ +0000-->
                                 </date>
                                 <date key="maximumDate" timeIntervalSinceReferenceDate="6311300400">
-                                    <!--2200-12-31 11:00:00 +0000-->
+                                    <!--۱۵۷۹-۱۰-۱۰ ۱۱:۰۰:۰۰ +0000-->
                                 </date>
                             </datePicker>
                         </subviews>
@@ -186,14 +186,42 @@
                     <view key="view" contentMode="scaleToFill" id="eSh-PU-zBf">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qsy-82-BOR">
+                                <rect key="frame" x="277" y="284" width="46" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="buttonPressed:" destination="du2-V3-e8A" eventType="touchUpInside" id="dFg-T9-vlF"/>
+                                </connections>
+                            </button>
+                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D5e-sE-K3O">
+                                <rect key="frame" x="0.0" y="28" width="600" height="216"/>
+                                <animations/>
+                                <connections>
+                                    <outlet property="dataSource" destination="du2-V3-e8A" id="drU-4S-dTY"/>
+                                    <outlet property="delegate" destination="du2-V3-e8A" id="iB1-TH-FT1"/>
+                                </connections>
+                            </pickerView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="D5e-sE-K3O" firstAttribute="top" secondItem="5Sl-UU-nk4" secondAttribute="bottom" constant="8" id="2O5-mc-eby"/>
+                            <constraint firstItem="qsy-82-BOR" firstAttribute="top" secondItem="D5e-sE-K3O" secondAttribute="bottom" constant="40" id="6bD-kg-OBA"/>
+                            <constraint firstItem="D5e-sE-K3O" firstAttribute="leading" secondItem="eSh-PU-zBf" secondAttribute="leading" id="E09-Gb-Ejq"/>
+                            <constraint firstAttribute="trailing" secondItem="D5e-sE-K3O" secondAttribute="trailing" id="SaY-a2-CDg"/>
+                            <constraint firstItem="qsy-82-BOR" firstAttribute="centerX" secondItem="eSh-PU-zBf" secondAttribute="centerX" id="Svk-Oo-b9s"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Dependent" image="dependenticon" id="hZX-Am-JT9"/>
+                    <connections>
+                        <outlet property="stateZipPicker" destination="D5e-sE-K3O" id="WUG-VJ-SUg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W23-q8-YTI" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="111" y="-471"/>
+            <point key="canvasLocation" x="-487" y="-471"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="MV7-XG-YLR">
