--- a/08/Simple Table/Simple Table/Base.lproj/Main.storyboard
+++ b/08/Simple Table/Simple Table/Base.lproj/Main.storyboard
@@ -15,12 +15,30 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xgx-51-0kj">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="KAM-50-96M"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="wXA-XK-6A4"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
                         <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xgx-51-0kj" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="TXW-Zv-ZuM"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="xgx-51-0kj" secondAttribute="bottom" id="bgk-W9-Omb"/>
+                            <constraint firstItem="xgx-51-0kj" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="fGO-WD-Fd8"/>
+                            <constraint firstAttribute="trailing" secondItem="xgx-51-0kj" secondAttribute="trailing" id="vQa-xb-MbZ"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="431" y="303"/>
         </scene>
     </scenes>
 </document>
